--- a/package.json
+++ b/package.json
@@ -14,7 +14,22 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "@headlessui/react": "^1.4.0",
+    "@heroicons/react": "^1.0.4",
+    "@portabletext/react": "^1.0.6",
+    "@sanity/block-content-to-react": "^3.0.0",
+    "@sanity/client": "^3.3.1",
+    "@sanity/image-url": "^1.0.1",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "axios": "^0.25.0",
+    "framer-motion": "^6.3.6",
+    "groq": "^2.29.3",
+    "next-sanity": "^0.5.2",
+    "sass": "^1.38.2",
+    "shopify-buy": "^2.15.1",
+    "swiper": "^6.7.5",
+    "swr": "^1.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
